--- a/hello_world/pubspec.yaml
+++ b/hello_world/pubspec.yaml
@@ -45,8 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/Background.jpg
+  # assets:
+  #   - assets/Background.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
